feat(slack): implement threaded responses

--- a/integrations/slack/package.json
+++ b/integrations/slack/package.json
@@ -25,6 +25,7 @@
     "@sentry/cli": "^2.39.1"
   },
   "bpDependencies": {
-    "typing-indicator": "../../interfaces/typing-indicator"
+    "typing-indicator": "../../interfaces/typing-indicator",
+    "threaded-responses": "../../interfaces/threaded-responses"
   }
 }
