--- a/.github/actions/deploy-interfaces/action.yml
+++ b/.github/actions/deploy-interfaces/action.yml
@@ -54,7 +54,7 @@ runs:
             interface=$(basename $interface_path)
             exists=$(./.github/scripts/interface-exists.sh $interface)
 
-            base_command="bp deploy -v -y" # all interfaces are public right now            
+            base_command="bp deploy -v -y --public"
             if [ $exists -eq 0 ]; then
                 echo -e "\nDeploying interface: ### $interface ###\n"
                 pnpm retry -n 2 -- pnpm -F "{interfaces/$interface}" -c exec -- "$base_command"
