--- a/integrations/confluence/package.json
+++ b/integrations/confluence/package.json
@@ -10,9 +10,11 @@
     "@botpress/client": "workspace:*",
     "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
-    "@types/markdown-it": "^14.1.2",
     "axios": "1.8.4",
     "markdown-it": "^14.1.0"
+  },
+  "devDependencies": {
+    "@types/markdown-it": "^14.1.2"
   },
   "bpDependencies": {
     "files-readonly": "../../interfaces/files-readonly",
