--- a/integrations/sunco/package.json
+++ b/integrations/sunco/package.json
@@ -21,7 +21,7 @@
   },
   "bpDependencies": {
     "typing-indicator": "../../interfaces/typing-indicator",
-    "proactiveUser": "../../interfaces/proactive-user",
-    "proactiveConversation": "../../interfaces/proactive-conversation"
+    "proactive-user": "../../interfaces/proactive-user",
+    "proactive-conversation": "../../interfaces/proactive-conversation"
   }
 }
