--- a/integrations/monday-com/package.json
+++ b/integrations/monday-com/package.json
@@ -7,8 +7,8 @@
   },
   "private": true,
   "dependencies": {
-    "axios": "^1.4.0",
     "@botpress/client": "1.12.0",
-    "@botpress/sdk": "workspace:*"
+    "@botpress/sdk": "workspace:*",
+    "axios": "^1.4.0"
   }
 }
