feat(common): add a generic wizard builder

--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
     "outDir": "dist",
     "baseUrl": ".",
-    "rootDir": "src"
+    "rootDir": "src",
+    "types": ["preact"]
   },
   "include": ["src/**/*"]
 }
