feat(googledrive): implement file picker

--- a/integrations/googledrive/tsconfig.json
+++ b/integrations/googledrive/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
+    "types": ["preact"],
     "baseUrl": ".",
     "outDir": "dist"
   },
