--- a/.github/workflows/run-llmz-tests.yml
+++ b/.github/workflows/run-llmz-tests.yml
@@ -29,11 +29,17 @@ jobs:
         run: |
           pnpm bp login
       - name: Run LLMz Tests
+        id: 'run-tests'
         run: |
-          bot_id=$(pnpm bp bots new --name "llmz-tests" --if-not-exists --json | jq -r ".id")
-          echo "bot_id=$bot_id"
+          bot_id=$(pnpm bp bots new --json | jq -r ".id")
+          echo "::set-output name=bot_id::$bot_id"
 
           export CLOUD_API_ENDPOINT='https://api.botpress.dev'
           export CLOUD_BOT_ID=$bot_id
           export CLOUD_PAT=${{ secrets.STAGING_TOKEN_CLOUD_OPS_ACCOUNT }}
           pnpm -F llmz run test
+
+      - name: Cleanup
+        if: ${{ always() }}
+        run: |
+          pnpm bp bots rm ${{ steps.run-tests.outputs.bot_id }}
