--- a/packages/llmz/package.json
+++ b/packages/llmz/package.json
@@ -41,7 +41,7 @@
     "ulid": "^2.3.0"
   },
   "devDependencies": {
-    "@botpress/client": "^0.40.0",
+    "@botpress/client": "^1.12.0",
     "@microsoft/api-extractor": "^7.49.0",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.6.8",
@@ -51,15 +51,13 @@
     "@types/lodash-es": "^4.17.12",
     "@types/ms": "^0.7.34",
     "@types/node": "^18.19.67",
-    "dotenv": "^16.4.7",
-    "esbuild": "^0.24.2",
-    "glob": "^11.0.0",
+    "dotenv": "^16.4.4",
+    "esbuild": "^0.16.12",
+    "glob": "^9.3.4",
     "source-map-js": "1.2.1",
     "ts-node": "^10.9.2",
-    "tsup": "^8.3.5",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2",
-    "vitest": "^2.1.8"
+    "tsup": "^8.0.2",
+    "tsx": "^4.19.2"
   },
   "peerDependencies": {
     "@botpress/cognitive": "^0.1.20",
