--- a/packages/llmz/package.json
+++ b/packages/llmz/package.json
@@ -41,7 +41,7 @@
     "ulid": "^2.3.0"
   },
   "devDependencies": {
-    "@botpress/client": "^1.12.0",
+    "@botpress/client": "1.12.0",
     "@microsoft/api-extractor": "^7.49.0",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.6.8",
