--- a/packages/llmz/package.json
+++ b/packages/llmz/package.json
@@ -51,6 +51,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/ms": "^0.7.34",
     "@types/node": "^18.19.67",
+    "diff": "^8.0.1",
     "dotenv": "^16.4.4",
     "esbuild": "^0.16.12",
     "glob": "^9.3.4",
