--- a/.github/actions/deploy-integrations/action.yml
+++ b/.github/actions/deploy-integrations/action.yml
@@ -85,23 +85,24 @@ runs:
 
             base_command="bp deploy -v -y --noBuild --public --allowDeprecated $dryrun"
 
+            upload_sandbox_scripts=false
             if [ $exists -eq 0 ]; then
                 echo -e "\nDeploying integration: ### $integration ###\n"
                 pnpm retry -n 2 -- pnpm -F "{integrations/$integration}" -c exec -- "$base_command"
+                upload_sandbox_scripts=true
             elif [ $redeploy -eq 1 ]; then
                 echo -e "\nRe-deploying integration: ### $integration ###\n"
                 pnpm retry -n 2 -- pnpm -F "{integrations/$integration}" -c exec -- "$base_command"
+                upload_sandbox_scripts=true
             else
                 echo -e "\nSkipping integration: ### $integration ###\n"
             fi
 
             # upload sandbox scripts
-            integration_name=$(pnpm bp read --json | jq -r ".name")
-            if [ $integration_implements_sandbox -eq 1 ]; then
+            integration_implements_sandbox=$(./.github/scripts/integration-implements-sandbox.sh $integration)
+            if [ $integration_implements_sandbox == "true" ] && [ $upload_sandbox_scripts == "true" ]; then
                 echo -e "\nUploading integration sandbox scripts\n"
-                integration_version=$(pnpm bp read --json | jq -r ".version")
-                integration_implements_sandbox=$(./.github/scripts/integration-implements-sandbox.sh $integration)
-                base_upload_command="uploadSandboxScripts --apiUrl=$api_url --workspaceId=$CLOUD_OPS_WORKSPACE_ID --token=$TOKEN_CLOUD_OPS_ACCOUNT --userEmail='cloud-ops@botpress.com' --integrationName=$integration_name --integrationVersion=$integration_version --integrationPath=$integration_path"
-                pnpm retry -n 2 -- pnpm -F "{integrations/$integration}" -c exec -- $base_upload_command
+                base_upload_command="uploadSandboxScripts --apiUrl=$api_url --workspaceId=$CLOUD_OPS_WORKSPACE_ID --token=$TOKEN_CLOUD_OPS_ACCOUNT --userEmail='cloud-ops@botpress.com'"
+                pnpm retry -n 2 -- pnpm -F "{integrations/$integration}" run -- $base_upload_command
             fi
         done
