--- a/.github/actions/deploy-integrations/action.yml
+++ b/.github/actions/deploy-integrations/action.yml
@@ -102,7 +102,7 @@ runs:
             integration_implements_sandbox=$(./.github/scripts/integration-implements-sandbox.sh $integration)
             if [ $integration_implements_sandbox == "true" ] && [ $upload_sandbox_scripts == "true" ]; then
                 echo -e "\nUploading integration sandbox scripts\n"
-                base_upload_command="uploadSandboxScripts --apiUrl=$api_url --workspaceId=$CLOUD_OPS_WORKSPACE_ID --token=$TOKEN_CLOUD_OPS_ACCOUNT --userEmail='cloud-ops@botpress.com'"
+                base_upload_command="uploadSandboxScripts --apiUrl=$api_url --workspaceId=$CLOUD_OPS_WORKSPACE_ID --token=$TOKEN_CLOUD_OPS_ACCOUNT --userEmail=cloud-ops@botpress.com"
                 pnpm retry -n 2 -- pnpm -F "{integrations/$integration}" run -- $base_upload_command
             fi
         done
