chore: update issue template

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -5,4 +5,4 @@ contact_links:
     about: If you're experiencing issues when using the on premise version of Botpress, please report the issue on the v12 repo.
   - name: Botpress Cloud
     url: https://discord.gg/botpress
-    about: If you're experiencing issues when using Botpress Cloud or have any question regarding Botpress Cloud but you're not sure about the nature of the issue, please report the issue on our Discord Server.
+    about: To get assistance as fast as possible, please reach us on our Discord server.
