--- a/packages/llmz/package.json
+++ b/packages/llmz/package.json
@@ -31,7 +31,7 @@
     "@babel/standalone": "^7.26.4",
     "@babel/traverse": "^7.26.4",
     "@babel/types": "^7.26.3",
-    "@botpress/client": "1.13.0",
+    "@botpress/client": "workspace:*",
     "bytes": "^3.1.2",
     "exponential-backoff": "^3.1.1",
     "handlebars": "^4.7.8",
