chore(llmz): minor refactor

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -21,7 +21,8 @@
     "**/gen/",
     "**/bp_modules/",
     "**/.turbo/",
-    "**/.genenv/"
+    "**/.genenv/",
+    "packages/llmz/examples/"
   ],
   "rules": {
     // Rules that have yet to be implemented in oxlint are commented out.
