--- a/packages/llmz/package.json
+++ b/packages/llmz/package.json
@@ -31,7 +31,7 @@
     "@babel/standalone": "^7.26.4",
     "@babel/traverse": "^7.26.4",
     "@babel/types": "^7.26.3",
-    "@botpress/client": "workspace:*",
+    "@botpress/client": "1.15.0",
     "bytes": "^3.1.2",
     "exponential-backoff": "^3.1.1",
     "handlebars": "^4.7.8",
@@ -52,6 +52,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/ms": "^0.7.34",
     "@types/node": "^18.19.67",
+    "chalk": "^4.1.2",
     "diff": "^8.0.1",
     "dotenv": "^16.4.4",
     "esbuild": "^0.16.12",
@@ -62,7 +63,7 @@
     "tsx": "^4.19.2"
   },
   "peerDependencies": {
-    "@botpress/cognitive": "^0.1.20",
+    "@botpress/cognitive": "^0.1.21",
     "@bpinternal/thicktoken": "^1.0.5",
     "@bpinternal/zui": "^0.22.4"
   },
