--- a/integrations/whatsapp/package.json
+++ b/integrations/whatsapp/package.json
@@ -6,7 +6,7 @@
     "build": "bp add -y && bp build",
     "check:type": "tsc --noEmit",
     "check:bplint": "bp lint",
-    "uploadSandboxScripts": "ts-node -T upload-sandbox-scripts.ts --integrationPath='./'"
+    "uploadSandboxScripts": "ts-node -T ../../scripts/upload-sandbox-scripts.ts --integrationPath='./'"
   },
   "dependencies": {
     "@botpress/client": "workspace:*",
