--- a/integrations/monday/package.json
+++ b/integrations/monday/package.json
@@ -6,6 +6,9 @@
     "build": "bp add -y && bp build"
   },
   "private": true,
+  "devDependencies": {
+    "@botpress/cli": "workspace:*"
+  },
   "dependencies": {
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
