--- a/integrations/confluence/package.json
+++ b/integrations/confluence/package.json
@@ -14,8 +14,8 @@
     "markdown-it": "^14.1.0"
   },
   "devDependencies": {
-    "@types/markdown-it": "^14.1.2",
-    "@botpress/cli": "workspace:*"
+    "@botpress/cli": "workspace:*",
+    "@types/markdown-it": "^14.1.2"
   },
   "bpDependencies": {
     "files-readonly": "../../interfaces/files-readonly",
