--- a/integrations/confluence/package.json
+++ b/integrations/confluence/package.json
@@ -14,6 +14,7 @@
     "markdown-it": "^14.1.0"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@types/markdown-it": "^14.1.2"
   },
   "bpDependencies": {
