chore: fix github ci

--- a/packages/zai/package.json
+++ b/packages/zai/package.json
@@ -23,7 +23,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@botpress/cognitive": "workspace:*",
+    "@botpress/cognitive": "0.1.24",
     "json5": "^2.2.3",
     "jsonrepair": "^3.10.0",
     "lodash-es": "^4.17.21"
