--- a/packages/cognitive/package.json
+++ b/packages/cognitive/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@botpress/client": "workspace:*",
     "@botpress/common": "workspace:*",
-    "@bpinternal/zui": "0.22.5",
+    "@bpinternal/zui": "^0.22.7",
     "@size-limit/file": "^11.1.6",
     "@types/axios": "^0.14.4",
     "@types/debug": "^4.1.12",
