fix: Blob.size is part of dom lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["es2022"],
+    "lib": ["es2022", "dom"],
     "module": "commonjs",
     "target": "es2022",
     "strict": true,
