--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,7 @@
     },
     "llmz#generate": {
       "outputs": ["src/**/*.md.ts"],
-      "dependsOn": ["^generate"]
+      "dependsOn": ["^generate", "^build"]
     },
     "build": {
       "outputs": ["bp_modules/**", ".botpress/**"],
