--- a/integrations/instagram/package.json
+++ b/integrations/instagram/package.json
@@ -6,7 +6,8 @@
     "build": "bp add -y && bp build",
     "check:type": "tsc --noEmit",
     "check:bplint": "bp lint",
-    "uploadSandboxScripts": "ts-node -T ../../scripts/upload-sandbox-scripts.ts --integrationPath='./'"
+    "uploadSandboxScripts": "ts-node -T ../../scripts/upload-sandbox-scripts.ts --integrationPath='./'",
+    "refreshTokens": "ts-node -T ./refreshTokens.ts"
   },
   "dependencies": {
     "@botpress/cli": "workspace:*",
