ignore test fixtures from type checking

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -7,5 +7,5 @@
     "sourceMap": true
   },
   "include": ["./src/**/*", "./e2e/**/*"],
-  "exclude": ["./templates/**"]
+  "exclude": ["./templates/**", "./e2e/fixtures/**"]
 }
