--- a/integrations/pipedrive/package.json
+++ b/integrations/pipedrive/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "@bp-templates/hello-world",
-  "integrationName": "bp-tryout/my-integration",
+  "name": "@botpresshub/pipedrive",
   "scripts": {
     "check:type": "tsc --noEmit",
     "build": "bp add -y && bp build",
@@ -8,19 +7,16 @@
   },
   "private": true,
   "dependencies": {
-    "@botpress/client": "1.15.1",
-    "@botpress/sdk": "4.8.2",
+    "@botpress/sdk": "workspace:*",
     "@sentry/cli": "^2.39.1",
-    "@types/qs": "^6.14.0",
     "axios": "^1.10.0",
     "pipedrive": "^28.0.0",
-    "qs": "^6.14.0",
-    "vitest": "^3.2.4",
-    "zod": "^3.25.67"
+    "qs": "^6.11.0"
   },
   "devDependencies": {
     "@types/node": "^18.19.67",
+    "@types/qs": "^6.9.7",
     "typescript": "^5.6.3",
-    "@types/qs": "^6.9.7"
+    "vitest": "^2.1.4"
   }
 }
