chore: Add package.json scripts

--- a/integrations/resend/package.json
+++ b/integrations/resend/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@botpresshub/resend",
   "scripts": {
-    "check:type": "tsc --noEmit"
+    "build": "bp add -y && bp build",
+    "check:type": "tsc --noEmit",
+    "check:bplint": "bp lint"
   },
   "private": true,
   "dependencies": {
