--- a/.github/actions/deploy-integrations/action.yml
+++ b/.github/actions/deploy-integrations/action.yml
@@ -76,7 +76,7 @@ runs:
         redeploy=${{ inputs.force == 'true' && 1 || 0 }}
         dryrun="${{ inputs.dry_run == 'true' && '--dryRun' || '' }}"
         is_dry_run=${{ inputs.dry_run == 'true' && 1 || 0 }}
-        all_filters="-F '{integrations/*}' -F '!asana' -F '!charts' ${{ inputs.extra_filter }}"
+        all_filters="-F '{integrations/*}' -F '!asana' ${{ inputs.extra_filter }}"
         list_integrations_cmd="pnpm list $all_filters --json"
         integration_paths=$(eval $list_integrations_cmd | jq -r "map(".path") | .[]")
 
