--- a/integrations/resend/package.json
+++ b/integrations/resend/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
+    "markdown-it": "^14.1.0",
     "resend": "^4.6.0"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^18.19.67",
     "typescript": "^5.6.3"
   }
