--- a/integrations/google-ai/package.json
+++ b/integrations/google-ai/package.json
@@ -10,7 +10,7 @@
     "@botpress/client": "workspace:*",
     "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
-    "@google/generative-ai": "^0.21.0"
+    "@google/genai": "^1.7.0"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
