Added product sync

--- a/integrations/magento2/package.json
+++ b/integrations/magento2/package.json
@@ -1,16 +1,23 @@
 {
   "name": "@bp-templates/hello-world",
-  "integrationName": "plus/magento2",
+  "integrationName": "@botpresshub/magento2",
   "scripts": {
-    "check:type": "tsc --noEmit"
+    "check:type": "tsc --noEmit",
+    "version": "bp --version",
+    "login": "bp login",
+    "gen": "bp gen",
+    "deploy": "bp deploy"
   },
   "private": true,
   "dependencies": {
     "@botpress/client": "1.15.0",
-    "@botpress/sdk": "4.8.1",
-    "oauth-1.0a": "^2.2.6"
+    "@botpress/sdk": "4.9.0",
+    "oauth-1.0a": "^2.2.6",
+    "axios": "^1.7.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@botpress/cli": "4.8.8",
     "@types/node": "^18.19.67",
     "typescript": "^5.6.3"
   }
