--- a/packages/cli/e2e/fixtures/plugins/plugin-with-interface-dependency/package.json
+++ b/packages/cli/e2e/fixtures/plugins/plugin-with-interface-dependency/package.json
@@ -6,7 +6,7 @@
   },
   "private": true,
   "dependencies": {
-    "@botpress/sdk": "4.8.2"
+    "@botpress/sdk": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^18.19.67",
