chore: switch to pnpm 10
update

--- a/packages/zai/tsconfig.json
+++ b/packages/zai/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "outDir": "dist",
     "strict": false,
+    "moduleResolution": "nodenext",
+    "module": "nodenext",
     "paths": {
       "@botpress/zai": ["./src/zai.ts"]
     }
