--- a/packages/zai/package.json
+++ b/packages/zai/package.json
@@ -29,7 +29,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@botpress/cognitive": "workspace:^",
+    "@botpress/cognitive": "0.1.29",
     "json5": "^2.2.3",
     "jsonrepair": "^3.10.0",
     "lodash-es": "^4.17.21"
