--- a/integrations/messenger/tsconfig.json
+++ b/integrations/messenger/tsconfig.json
@@ -1,11 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact",
     "baseUrl": ".",
-    "outDir": "dist",
-    "types": ["preact"]
+    "outDir": "dist"
   },
   "include": [".botpress/**/*", "src/**/*", "integration.definition.ts"]
 }
