--- a/integrations/messenger/package.json
+++ b/integrations/messenger/package.json
@@ -13,8 +13,7 @@
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "axios": "^1.6.2",
-    "messaging-api-messenger": "^1.1.0",
-    "query-string": "^6.14.1"
+    "messaging-api-messenger": "^1.1.0"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
