--- a/integrations/sendgrid/package.json
+++ b/integrations/sendgrid/package.json
@@ -17,8 +17,6 @@
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
-    "@types/markdown-it": "^14.1.2",
-    "@types/node": "^18.19.67",
-    "typescript": "^5.6.3"
+    "@types/markdown-it": "^14.1.2"
   }
 }
