added tests for getPageFromEnd

--- a/integrations/email/package.json
+++ b/integrations/email/package.json
@@ -2,7 +2,8 @@
   "name": "@botpresshub/email",
   "scripts": {
     "check:type": "tsc --noEmit",
-    "build": "bp build"
+    "build": "bp build",
+    "test": "vitest"
   },
   "private": true,
   "dependencies": {
