--- a/integrations/email/package.json
+++ b/integrations/email/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@types/imap": "^0.8.42",
-    "@types/node": "^18.19.67",
+    "@types/node": "24.0.15",
     "typescript": "^5.6.3"
   }
 }
