--- a/integrations/email/package.json
+++ b/integrations/email/package.json
@@ -9,13 +9,13 @@
   "dependencies": {
     "@botpress/client": "1.19.0",
     "@botpress/sdk": "4.14.3",
-    "@types/nodemailer": "^6.4.17",
     "imap": "^0.8.17",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "@types/imap": "^0.8.42",
-    "@types/node": "24.0.15",
+    "@types/node": "^22.16.4",
+    "@types/nodemailer": "^6.4.4",
     "typescript": "^5.6.3"
   }
 }
