--- a/integrations/email/package.json
+++ b/integrations/email/package.json
@@ -14,8 +14,6 @@
   },
   "devDependencies": {
     "@types/imap": "^0.8.42",
-    "@types/node": "^22.16.4",
-    "@types/nodemailer": "^6.4.4",
-    "typescript": "^5.6.3"
+    "@types/nodemailer": "^6.4.4"
   }
 }
