--- a/integrations/email/package.json
+++ b/integrations/email/package.json
@@ -7,8 +7,8 @@
   },
   "private": true,
   "dependencies": {
-    "@botpress/client": "1.20.0",
-    "@botpress/sdk": "4.14.3",
+    "@botpress/client": "workspace:*",
+    "@botpress/sdk": "workspace:*",
     "imap": "^0.8.17",
     "nodemailer": "^6.7.2"
   },
