--- a/integrations/email/package.json
+++ b/integrations/email/package.json
@@ -7,15 +7,13 @@
   },
   "private": true,
   "dependencies": {
-    "@botpress/client": "1.20.0",
-    "@botpress/sdk": "4.14.3",
+    "@botpress/client": "workspace:*",
+    "@botpress/sdk": "workspace:*",
     "imap": "^0.8.17",
     "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "@types/imap": "^0.8.42",
-    "@types/node": "^22.16.4",
-    "@types/nodemailer": "^6.4.4",
-    "typescript": "^5.6.3"
+    "@types/nodemailer": "^6.4.4"
   }
 }
