--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -14,6 +14,8 @@
 /plugins @botpress/engineering
 
 # Integrations
+/integrations @botpress/engineering
+
 ## Utils
 /integrations/browser @allardy @botpress/engineering
 /integrations/charts @allardy @botpress/engineering
@@ -28,37 +30,42 @@
 /integrations/openai @AbrahamLopez10 @botpress/engineering
 
 ## Others
-/integrations/airtable @pascal-botpress @botpress/engineering
-/integrations/asana @SebastienPoitras @botpress/engineering
-/integrations/bigcommerce-sync @matthewbotpress @botpress/engineering
+/integrations/airtable @JustinBordage @botpress/engineering
+/integrations/asana @JustinBordage @botpress/engineering
+/integrations/bigcommerce-sync @Nathaniel-Girard @botpress/engineering
 /integrations/chat @franklevasseur @botpress/engineering
-/integrations/clickup @franklevasseur @botpress/engineering
+/integrations/clickup @Nathaniel-Girard @botpress/engineering
+/integrations/confluence @Nathaniel-Girard @botpress/engineering
 /integrations/dropbox @pascal-botpress @botpress/engineering
-/integrations/freshchat @SebastienPoitras @botpress/engineering
-/integrations/github @pascal-botpress @botpress/engineering
+/integrations/email @Nathaniel-Girard @botpress/engineering
+/integrations/freshchat @davidvitora @botpress/engineering
+/integrations/github @Nathaniel-Girard @botpress/engineering
 /integrations/gmail @pascal-botpress @botpress/engineering
 /integrations/googlecalendar @pascal-botpress @botpress/engineering
 /integrations/googledrive @pascal-botpress @botpress/engineering
 /integrations/gsheets @pascal-botpress @botpress/engineering
 /integrations/instagram @SebastienPoitras @botpress/engineering
-/integrations/intercom @SebastienPoitras @botpress/engineering
-/integrations/line @SebastienPoitras @botpress/engineering
+/integrations/intercom @JustinBordage @botpress/engineering
+/integrations/line @Nathaniel-Girard @botpress/engineering
 /integrations/linear @franklevasseur @botpress/engineering
-/integrations/mailchimp @SebastienPoitras @botpress/engineering
+/integrations/mailchimp @JustinBordage @botpress/engineering
 /integrations/messenger @SebastienPoitras @botpress/engineering
+/integrations/monday @Nathaniel-Girard @botpress/engineering
 /integrations/notion @pascal-botpress @botpress/engineering
+/integrations/resend @JustinBordage @botpress/engineering
+/integrations/sendgrid @JustinBordage @botpress/engineering
 /integrations/slack @pascal-botpress @botpress/engineering
-/integrations/stripe @SebastienPoitras @botpress/engineering
+/integrations/stripe @Nathaniel-Girard @botpress/engineering
 /integrations/sunco @SebastienPoitras @botpress/engineering
-/integrations/teams @franklevasseur @botpress/engineering
-/integrations/telegram @franklevasseur @botpress/engineering
-/integrations/todoist @SebastienPoitras @botpress/engineering
-/integrations/trello @pascal-botpress @botpress/engineering
+/integrations/teams @JustinBordage @davidvitora @botpress/engineering
+/integrations/telegram @JustinBordage @franklevasseur @botpress/engineering
+/integrations/todoist @JustinBordage @botpress/engineering
+/integrations/trello @JustinBordage @botpress/engineering
 /integrations/twilio @SebastienPoitras @botpress/engineering
-/integrations/viber @SebastienPoitras @botpress/engineering
-/integrations/vonage @SebastienPoitras @botpress/engineering
+/integrations/viber @JustinBordage @botpress/engineering
+/integrations/vonage @JustinBordage @botpress/engineering
 /integrations/webhook @franklevasseur @botpress/engineering
 /integrations/whatsapp @SebastienPoitras @botpress/engineering
-/integrations/zapier @SebastienPoitras @botpress/engineering
-/integrations/zendesk @franklevasseur @botpress/engineering
-/integrations/zoho @matthewbotpress @botpress/engineering
+/integrations/zapier @Nathaniel-Girard @botpress/engineering
+/integrations/zendesk @pascal-botpress @franklevasseur @botpress/engineering
+/integrations/zoho @Nathaniel-Girard @botpress/engineerin
