--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -68,4 +68,4 @@
 /integrations/whatsapp @SebastienPoitras @botpress/engineering
 /integrations/zapier @Nathaniel-Girard @botpress/engineering
 /integrations/zendesk @pascal-botpress @franklevasseur @botpress/engineering
-/integrations/zoho @Nathaniel-Girard @botpress/engineerin
+/integrations/zoho @Nathaniel-Girard @botpress/engineering
